--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <a href="Offers.html" style="font-size:30px; text-align:center; background-color: lightgreen; padding: 5px 30px 5px 30px; margin-right:30px;">Offers</a>
 <a href="services.html" style="font-size:30px; text-align:center; background-color: lightgreen; padding: 5px 30px 5px 30px; margin-right:30px;">Services</a>
 </div>
-<p style="font-size:20px; text-align:center; margin-bottom:50px;">SKYCAFE is your neighborhood haven for expertly crafted coffee and cozy ambiance.<br>Come in and savor the moment.</p>
+<p style="font-size:20px; text-align:center; margin-bottom:50px;">SKYCAFE is your neighbourhood haven for expertly crafted coffee and cosy ambience.<br>Come in and savor the moment.</p>
 
 <div style="margin-top:50px">
 <img style="width:30%;" src="coffeecup.jpg">
