--- a/services.html
+++ b/services.html
@@ -8,7 +8,7 @@
 <img style="width:50%;" src="comingsoon.jpg" align="center" </center>
 </div>
 
-<h2 style="text-align:center; font-size:40px;">NEXT IT'S YOUR PALCE</h2>
+<h2 style="text-align:center; font-size:40px;">NEXT IT'S YOUR PLACE</h2>
 
 <div style="text-align:center; margin-bottom:80px;">
 <a href="index.html" style="font-size:30px; text-align:center; background-color: lightgreen; padding: 5px 30px 5px 30px; margin-right:30px;">Home</a>
