--- a/Menu.html
+++ b/Menu.html
@@ -19,7 +19,7 @@
  </div>
 </div>
 
-<h2 style="margin-bottom:40px; font-size:30px; text-align:center;">We know want you want</h2>
+<h2 style="margin-bottom:40px; font-size:30px; text-align:center;">We know what you want</h2>
 <h2 style="font-size:30px; text-align:center;">Amazing offers are waiting for you........</h2>
 <p style="font-size:30px; text-align:center; margin-bottom:50px;">Then what are you looking for.....click on Offers </p>
 
